unpackaged/main/default/objects/Weekly_Report__c/Weekly_Report__c.object-meta.xml
<CustomObject>
    <label>Weekly Sales  Report</label>
    <nameField>
        <displayFormat>WSR-{00000}</displayFormat>
        <label>Weekly Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Sales Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>