unpackaged/main/default/objects/Weekly_Report__c/fields/Accomplishments_For_This_Week__c.field-meta.xml
<CustomField>
    <fullName>Accomplishments_For_This_Week__c</fullName>
    <inlineHelpText>Monday - What goals do you have targeted in addition to accept signing
Friday - update the outcome for those goals.</inlineHelpText>
    <label>Weekly Goals / Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>