unpackaged/main/default/objects/Weekly_Report__c/fields/Accounts_Targeted__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Targeted__c</fullName>
    <inlineHelpText>Monday - list accounts targeted for tiered increase.
Friday - update accounts targeted</inlineHelpText>
    <label>Accounts Increase Goal / Update</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>