unpackaged/main/default/objects/Weekly_Report__c/fields/ISR_Name_Contact_Discussion__c.field-meta.xml
<CustomField>
    <fullName>ISR_Name_Contact_Discussion__c</fullName>
    <inlineHelpText>Type the name of your Independent Sales Representative, Each last contact date and what was discussed. Also Let us know future plans with each ISR.
In this sections also update on recruiting efforts and what your doing to grow your team.</inlineHelpText>
    <label>ISR-Name/Contact Date/Discussion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>