unpackaged/main/default/objects/Weekly_Report__c/fields/Large_Customer_Visits__c.field-meta.xml
<CustomField>
    <fullName>Large_Customer_Visits__c</fullName>
    <inlineHelpText>Visit=Next Date Visit Planned
Goal=What you are looking to accomplish at visit
Update=Put date visited and BRIEF update of visit</inlineHelpText>
    <label>Large Customer Date Visit/Goal/Update</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>