unpackaged/main/default/objects/Weekly_Report__c/fields/Market_Targets__c.field-meta.xml
<CustomField>
    <fullName>Market_Targets__c</fullName>
    <description>List the major restoration companies in your market</description>
    <inlineHelpText>List the company name and if it is closed</inlineHelpText>
    <label>High Target Prospects</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>