unpackaged/main/default/objects/Weekly_Report__c/fields/Month_To_Date_Pickup_Variance__c.field-meta.xml
<CustomField>
    <fullName>Month_To_Date_Pickup_Variance__c</fullName>
    <inlineHelpText>What is the difference between your goal and actual ?</inlineHelpText>
    <label>Month To Date Pickup Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>