unpackaged/main/default/objects/Weekly_Report__c/fields/Monthly_Goal_Comfort_Level__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Goal_Comfort_Level__c</fullName>
    <inlineHelpText>From 0%-100% what is your comfort level you will achieve your projections.</inlineHelpText>
    <label>Monthly Projection Comfort Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>