unpackaged/main/default/objects/Weekly_Report__c/fields/Monthly_Pickup_Goal__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Pickup_Goal__c</fullName>
    <inlineHelpText>How many pickups should you have by the end of this month based on your start date?</inlineHelpText>
    <label>Monthly Pickup Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>