unpackaged/main/default/objects/Weekly_Report__c/fields/Monthly_Pickup_Projection__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Pickup_Projection__c</fullName>
    <inlineHelpText>How many pickups are you projecting to get by the end of the month.</inlineHelpText>
    <label>Monthly Pickup Projection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>