unpackaged/main/default/objects/Weekly_Report__c/fields/Network_Events__c.field-meta.xml
<CustomField>
    <fullName>Network_Events__c</fullName>
    <inlineHelpText>Enter network events such as BNI you plan on attending in the near future.</inlineHelpText>
    <label>Network Events</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>