unpackaged/main/default/objects/Weekly_Report__c/fields/New_Accounts_Added__c.field-meta.xml
<CustomField>
    <fullName>New_Accounts_Added__c</fullName>
    <description>The goal is 2-3 new accounts per week per sales representative. High value targets are major restoration companies and regular targets are local companies.</description>
    <inlineHelpText>The goal is 2-3 new accounts per week per sales representative. High value targets are major restoration companies and regular targets are local companies.</inlineHelpText>
    <label>New Account Goal / Update</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>