unpackaged/main/default/objects/Weekly_Report__c/fields/New_Accounts_Not_On_Goal__c.field-meta.xml
<CustomField>
    <fullName>New_Accounts_Not_On_Goal__c</fullName>
    <inlineHelpText>List all new accounts that were closed this week but not listed on new account goal sheet.</inlineHelpText>
    <label>New Accounts Not On Goal</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>