unpackaged/main/default/objects/Weekly_Report__c/fields/Number_of_Demos_Documented__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Demos_Documented__c</fullName>
    <inlineHelpText>Whats the number of documented  (pictures) demo&#39;s completed?</inlineHelpText>
    <label>Number of Demos Documented</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>