unpackaged/main/default/objects/Weekly_Report__c/fields/Pickups_Month_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickups_Month_To_Date__c</fullName>
    <label>Pickups Month To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>