unpackaged/main/default/objects/Weekly_Report__c/fields/Variance_Recovery_Plan__c.field-meta.xml
<CustomField>
    <fullName>Variance_Recovery_Plan__c</fullName>
    <inlineHelpText>If not on goal, what Is your recovery plan.</inlineHelpText>
    <label>Plan if not on goal</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>