unpackaged/main/default/objects/Weekly_Report__c/fields/Weekly_Pickup_Goal_Actual__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Pickup_Goal_Actual__c</fullName>
    <inlineHelpText>On Sunday enter your weekly pickup goal / on Friday enter weekly pickup actual.</inlineHelpText>
    <label>Weekly Pickup Goal/Actual</label>
    <type>TextArea</type>
</CustomField>