unpackaged/main/default/objects/Weekly_Report__c/listViews/Week_Ending.listView-meta.xml
<ListView>
    <fullName>Week_Ending</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Week_Ending__c</field>
        <operation>equals</operation>
        <value>2/16/2018</value>
    </filters>
    <label>Week Ending</label>
</ListView>